# aurora

./: .gitignore  README.md  pyproject.toml  sitecustomize.py
docs/plans/: 2026-05-01-aurora-implementation.md  2026-05-01-salones-clinicas-mvp-implementation.md
src/salon_mvp/: __init__.py  admin_views.py  booking_service.py  business_rules.py  chat_flow.py  chat_orchestrator.py  cli.py  dashboard.py  demo.py  domain.py  integrations.py  reminders.py  scheduling.py  storage.py
tests/: test_admin_views.py  test_booking_service.py  test_business_rules.py  test_chat_flow.py  test_chat_orchestrator.py  test_cli.py  test_dashboard.py  test_demo_app.py  test_domain.py  test_integrations_contracts.py  test_reminders.py  test_scheduling.py  test_storage.py
