[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "salones-clinicas-mvp"
version = "0.1.0"
description = "MVP local para un asistente conversacional de salones y clínicas"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
